--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,13 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^1.1.0
   yakforward_logo: 
     git:
       url: https://github.com/yakforward/yakforward_logo.git
       ref: master
       
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
