--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,7 @@ dev_dependencies:
   flutter_lints: ^2.0.1
 
 flutter:
-  assets:
-    - assets/svg/
   fonts:
     - family: yakforward
       fonts:
-        - asset: assets/font/yakforward-logo-font.ttf
+        - asset: fonts/yakforward-logo.ttf
