--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=/Users/yakforward/Library/Android/sdk
 flutter.sdk=/Users/yakforward/fvm/versions/stable
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
