--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,3 +19,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: yakforward
+      fonts:
+        - asset: fonts/yakforward-logo.ttf
