--- a/example/.gitignore
+++ b/example/.gitignore
@@ -42,7 +42,10 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+/android
+/ios
+/web
+/macos
+/windows
+/linux
 .metadata
